--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,17 +24,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Cache Hatch
-      id: cache-hatch
+    - name: Set up pip cache
+      if: runner.os == 'Linux'
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-    - name: Show requirements
-      run: |
-        hatch dep show requirements > /app/requirements.txt
+        key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
+        restore-keys: ${{ runner.os }}-pip-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
