--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,18 +24,18 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Cache Hatch environments
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/hatch
-        key: hatch-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
-        restore-keys: |
-          hatch-${{ runner.os }}-
+    # - name: Cache Hatch environments
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: ~/.cache/hatch
+    #     key: hatch-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
+    #     restore-keys: |
+    #       hatch-${{ runner.os }}-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest hatch
-        python -m pip install -r /app/requirements.txt
+        pip install .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
