--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,11 +31,8 @@ jobs:
     #     key: hatch-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
     #     restore-keys: |
     #       hatch-${{ runner.os }}-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest hatch
-        pip install .
+    - name: Set up Hatch environment and install dependencies
+      run: hatch env create
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
