--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,6 +31,10 @@ jobs:
     #     key: hatch-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
     #     restore-keys: |
     #       hatch-${{ runner.os }}-
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install hatch
     - name: Set up Hatch environment and install dependencies
       run: hatch env create
     - name: Lint with flake8
