--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,7 +36,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install hatch
     - name: Set up Hatch environment and install dependencies
-      run: hatch env create hatch run
+      run: hatch env create
+    - name: Look at dependancies
+      run: hatch project metadata
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
