--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,29 +7,37 @@ name = "pyplaces"
 dynamic = ["version"]
 description = ''
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = "MIT"
 keywords = []
 authors = [
-  { name = "Ted", email = "tedbanken@gmail.com" },
+  { name = "Ted Banken", email = "tedbanken@gmail.com" },
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: Microsoft :: Windows :: Windows 10",
+  "Topic :: Scientific/Engineering :: GIS"
 ]
-dependencies = []
+dependencies = [
+"pyarrow>=19.0.1,<20",
+"geopandas>=1.0.1,<2",
+"shapely>=2.0.7,<3",
+"pyproj>=3.7.1,<4",
+"numpy>=2.2.4,<3",
+"osmnx>=2.0.2,<3",]
 
 [project.urls]
 Documentation = "https://github.com/unknown/pyplaces#readme"
 Issues = "https://github.com/unknown/pyplaces/issues"
-Source = "https://github.com/unknown/pyplaces"
+Source = "https://github.com/tbanken/pyplaces"
 
 [tool.hatch.version]
 path = "src/pyplaces/__about__.py"
@@ -52,7 +60,7 @@ cov = [
 ]
 
 [[tool.hatch.envs.all.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+python = ["3.9", "3.10", "3.11", "3.12"]
 
 [tool.hatch.envs.types]
 dependencies = [
