--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,13 +24,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    # - name: Cache Hatch environments
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: ~/.cache/hatch
-    #     key: hatch-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
-    #     restore-keys: |
-    #       hatch-${{ runner.os }}-
+    - name: Cache Hatch environments
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/hatch
+        key: hatch-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
+        restore-keys: |
+          hatch-${{ runner.os }}-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
