remove py39 compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pyplaces"
 dynamic = ["version"]
 description = ''
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = "MIT"
 keywords = []
 authors = [
@@ -16,7 +16,6 @@ authors = [
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
@@ -30,8 +29,8 @@ dependencies = [
 "pyarrow>=19.0.1,<20",
 "geopandas>=1.0.1,<2",
 "shapely>=2.0.7,<3",
-"pyproj>=3.6.1,<4",
-"numpy>=2.0.2,<3",
+"pyproj>=3.7.1,<4",
+"numpy>=2.2.4,<3",
 "osmnx>=2.0.2,<3",]
 
 [project.urls]
@@ -60,7 +59,7 @@ cov = [
 ]
 
 [[tool.hatch.envs.all.matrix]]
-python = ["3.9", "3.10", "3.11", "3.12"]
+python = ["3.10", "3.11", "3.12"]
 
 [tool.hatch.envs.types]
 dependencies = [
