--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -24,13 +24,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Cache Hatch environments
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/hatch
-        key: hatch-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
-        restore-keys: |
-          hatch-${{ runner.os }}-
+    - name: Set up pip cache
+        if: runner.os == 'Linux'
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
