publish edits yaml

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -49,5 +49,5 @@ jobs:
       run: hatch build
     - name: Test
       run: hatch run test
-    - name: Publish
-      run: hatch publish
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
